--- a/GradientBased.cbp
+++ b/GradientBased.cbp
@@ -3,10 +3,12 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="GradientBased" />
+		<Option makefile="makefile" />
+		<Option makefile_is_custom="1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="debug">
 				<Option output="bin/Debug/GradientBased" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
@@ -23,7 +25,7 @@
 					<Add library="gomp" />
 				</Linker>
 			</Target>
-			<Target title="Release">
+			<Target title="release">
 				<Option output="bin/Release/GradientBased" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
