--- a/example/makefile
+++ b/example/makefile
@@ -18,7 +18,7 @@ BIN_DIR = bin
 OUTPUT = $(BIN_DIR)/BubbleTest
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/binaryIO.o $(OBJ_DIR)/cell.o $(OBJ_DIR)/lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/matrix.o $(OBJ_DIR)/paramset.o $(OBJ_DIR)/vector.o
+OBJ_DEBUG = $(OBJ_DIR)/binaryIO.o $(OBJ_DIR)/cell.o $(OBJ_DIR)/lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/matrix.o $(OBJ_DIR)/paramset.o $(OBJ_DIR)/preprocess.o $(OBJ_DIR)/vector.o
 
 all: clean build
 
@@ -52,6 +52,9 @@ $(OBJ_DIR)/matrix.o: $(SRC)/matrix.cpp
 
 $(OBJ_DIR)/paramset.o: $(SRC)/paramset.cpp
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/paramset.cpp -o $(OBJ_DIR)/paramset.o
+
+$(OBJ_DIR)/preprocess.o: $(SRC)/preprocess.cpp
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/preprocess.cpp -o $(OBJ_DIR)/preprocess.o
 
 $(OBJ_DIR)/vector.o: $(SRC)/vector.cpp
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/vector.cpp -o $(OBJ_DIR)/vector.o
