--- a/deeperAnalysis/makefile
+++ b/deeperAnalysis/makefile
@@ -14,8 +14,7 @@ LDFLAGS = -lboost_program_options -lgomp
 
 SRC = ../src
 OBJ_DIR = obj
-BIN_DIR = bin
-OUTPUT = $(BIN_DIR)/BubbleTest
+OUTPUT = deeperAnalysis
 
 # creating OBJs
 OBJ_DEBUG = $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
@@ -70,7 +69,6 @@ $(OBJ_DIR)/Vector.o: $(SRC)/Vector.cc
 
 clean: 
 	rm -f $(OBJ_DEBUG) $(OUTPUT)
-	rm -rf $(BIN_DIR)
 	rm -rf $(OBJ_DIR)
 run: 
 	./$(OUTPUT)
