--- a/aux/translate/makefile
+++ b/aux/translate/makefile
@@ -12,9 +12,9 @@ CFLAGS =  -Wall -O3 -fopenmp
 LDFLAGS = -lboost_program_options -lgomp
 #-lpthread
 
-SRC = ../src
+SRC = ../../src
 OBJ_DIR = obj
-OUTPUT = bin2tec
+OUTPUT = translate_params
 
 # creating OBJs
 OBJ_DEBUG = $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
@@ -70,8 +70,7 @@ $(OBJ_DIR)/Vector.o: $(SRC)/Vector.cc
 clean: 
 	rm -f $(OBJ_DEBUG) $(OUTPUT)
 	rm -rf $(OBJ_DIR)
-	rm -rf log
 run: 
-	./$(OUTPUT) > log
+	./$(OUTPUT)
 
 .PHONY: before_debug after_debug clean
