--- a/aux/Postprocess/makefile
+++ b/aux/Postprocess/makefile
@@ -17,7 +17,7 @@ OBJ_DIR = obj
 OUTPUT = bin2tec
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
+OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
 
 all: clean build
 
@@ -33,6 +33,9 @@ build: before_debug out_debug after_debug
 
 out_debug: before_debug $(OBJ_DEBUG)
 	$(LD) -o $(OUTPUT) $(OBJ_DEBUG)  $(LDFLAGS) $(LIB)
+
+$(OBJ_DIR)/Analyze.o: $(SRC)/Analyze.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Analyze.cc -o $(OBJ_DIR)/Analyze.o
 
 $(OBJ_DIR)/BinaryIO.o: $(SRC)/BinaryIO.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/BinaryIO.cc -o $(OBJ_DIR)/BinaryIO.o
