renamed Cell -> Cell2D

--- a/test/makefile
+++ b/test/makefile
@@ -17,7 +17,7 @@ BIN_DIR = bin
 OUTPUT = $(BIN_DIR)/GradientBased
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
+OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
 
 all: build run
 
@@ -41,8 +41,8 @@ $(OBJ_DIR)/BinaryIO.o: $(SRC)/BinaryIO.cc
 $(OBJ_DIR)/Constants.o: $(SRC)/Constants.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Constants.cc -o $(OBJ_DIR)/Constants.o
 
-$(OBJ_DIR)/Cell.o: $(SRC)/Cell.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Cell.cc -o $(OBJ_DIR)/Cell.o
+$(OBJ_DIR)/Cell2D.o: $(SRC)/Cell2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Cell2D.cc -o $(OBJ_DIR)/Cell2D.o
 
 $(OBJ_DIR)/Definitions.o: $(SRC)/Definitions.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Definitions.cc -o $(OBJ_DIR)/Definitions.o	
