--- a/test/makefile
+++ b/test/makefile
@@ -17,7 +17,7 @@ BIN_DIR = bin
 OUTPUT = $(BIN_DIR)/GradientBased
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector2D.o
+OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix2D.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector2D.o
 
 all: build run
 
@@ -53,8 +53,8 @@ $(OBJ_DIR)/Lattice.o: $(SRC)/Lattice.cc
 $(OBJ_DIR)/main.o: main.cc
 	$(CXX) $(CFLAGS) $(INC) -c main.cc -o $(OBJ_DIR)/main.o
 
-$(OBJ_DIR)/Matrix.o: $(SRC)/Matrix.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Matrix.cc -o $(OBJ_DIR)/Matrix.o
+$(OBJ_DIR)/Matrix2D.o: $(SRC)/2D/Matrix2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Matrix2D.cc -o $(OBJ_DIR)/Matrix2D.o
 
 $(OBJ_DIR)/ParamSet.o: $(SRC)/ParamSet.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/ParamSet.cc -o $(OBJ_DIR)/ParamSet.o
