--- a/example/makefile
+++ b/example/makefile
@@ -18,7 +18,7 @@ BIN_DIR = bin
 OUTPUT = $(BIN_DIR)/BubbleTest
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/Analyze.o $(OBJ_DIR)/BinaryIO.o $(OBJ_DIR)/Constants.o $(OBJ_DIR)/Cell.o $(OBJ_DIR)/Definitions.o $(OBJ_DIR)/Lattice.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector.o
+OBJ_DEBUG = $(OBJ_DIR)/Analyze_basic.o  $(OBJ_DIR)/Analyze2D.o $(OBJ_DIR)/BasicIO.o $(OBJ_DIR)/BinaryIO2D.o $(OBJ_DIR)/Constants2D.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice2D.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix2D.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Timetrack.o $(OBJ_DIR)/Vector2D.o
 
 all: clean build
 
@@ -35,29 +35,35 @@ build: before_debug out_debug after_debug
 out_debug: before_debug $(OBJ_DEBUG)
 	$(LD) -o $(OUTPUT) $(OBJ_DEBUG)  $(LDFLAGS) $(LIB)
 
-$(OBJ_DIR)/Analyze.o: $(SRC)/Analyze.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Analyze.cc -o $(OBJ_DIR)/Analyze.o
+$(OBJ_DIR)/Analyze_basic.o: $(SRC)/Analyze_basic.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Analyze_basic.cc -o $(OBJ_DIR)/Analyze_basic.o
 
-$(OBJ_DIR)/BinaryIO.o: $(SRC)/BinaryIO.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/BinaryIO.cc -o $(OBJ_DIR)/BinaryIO.o
+$(OBJ_DIR)/Analyze2D.o: $(SRC)/2D/Analyze2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Analyze2D.cc -o $(OBJ_DIR)/Analyze2D.o
 
-$(OBJ_DIR)/Constants.o: $(SRC)/Constants.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Constants.cc -o $(OBJ_DIR)/Constants.o
+$(OBJ_DIR)/BasicIO.o: $(SRC)/BasicIO.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/BasicIO.cc -o $(OBJ_DIR)/BasicIO.o
 
-$(OBJ_DIR)/Cell.o: $(SRC)/Cell.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Cell.cc -o $(OBJ_DIR)/Cell.o
+$(OBJ_DIR)/BinaryIO2D.o: $(SRC)/2D/BinaryIO2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/BinaryIO2D.cc -o $(OBJ_DIR)/BinaryIO2D.o
 
-$(OBJ_DIR)/Definitions.o: $(SRC)/Definitions.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Definitions.cc -o $(OBJ_DIR)/Definitions.o
+$(OBJ_DIR)/Constants2D.o: $(SRC)/2D/Constants2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Constants2D.cc -o $(OBJ_DIR)/Constants2D.o
 
-$(OBJ_DIR)/Lattice.o: $(SRC)/Lattice.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Lattice.cc -o $(OBJ_DIR)/Lattice.o
+$(OBJ_DIR)/Cell2D.o: $(SRC)/2D/Cell2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Cell2D.cc -o $(OBJ_DIR)/Cell2D.o
+
+$(OBJ_DIR)/Definitions2D.o: $(SRC)/2D/Definitions2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Definitions2D.cc -o $(OBJ_DIR)/Definitions2D.o	
+
+$(OBJ_DIR)/Lattice2D.o: $(SRC)/2D/Lattice2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Lattice2D.cc -o $(OBJ_DIR)/Lattice2D.o
 
 $(OBJ_DIR)/main.o: main.cc
 	$(CXX) $(CFLAGS) $(INC) -c main.cc -o $(OBJ_DIR)/main.o
 
-$(OBJ_DIR)/Matrix.o: $(SRC)/Matrix.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Matrix.cc -o $(OBJ_DIR)/Matrix.o
+$(OBJ_DIR)/Matrix2D.o: $(SRC)/2D/Matrix2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Matrix2D.cc -o $(OBJ_DIR)/Matrix2D.o
 
 $(OBJ_DIR)/ParamSet.o: $(SRC)/ParamSet.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/ParamSet.cc -o $(OBJ_DIR)/ParamSet.o
@@ -68,8 +74,8 @@ $(OBJ_DIR)/Preprocess.o: $(SRC)/Preprocess.cc
 $(OBJ_DIR)/Timetrack.o: $(SRC)/Timetrack.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Timetrack.cc -o $(OBJ_DIR)/Timetrack.o
 
-$(OBJ_DIR)/Vector.o: $(SRC)/Vector.cc
-	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/Vector.cc -o $(OBJ_DIR)/Vector.o
+$(OBJ_DIR)/Vector2D.o: $(SRC)/2D/Vector2D.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Vector2D.cc -o $(OBJ_DIR)/Vector2D.o
 
 clean: 
 	rm -f $(OBJ_DEBUG) $(OUTPUT)
