adapted code to work with gcc-4.8

--- a/test/makefile
+++ b/test/makefile
@@ -6,10 +6,10 @@ AR = ar
 LD = g++
 WINDRES = windres
 
-INC = -I../../../gtest-1.6.0/include
+INC = -I../../../gtest-1.7.0/include
 CFLAGS =  -Wall -g -fopenmp
-LIB = ../../../gtest-1.6.0/make/gtest_main.a
-LDFLAGS = -lpthread -lgomp
+LIB = ../../../gtest-1.7.0/make/gtest_main.a
+LDFLAGS = -lgomp -lpthread
 
 SRC = ../src
 OBJ_DIR = obj
