--- a/example/makefile
+++ b/example/makefile
@@ -7,7 +7,7 @@ LD = g++
 WINDRES = windres
 
 #INC = -I../../../gtest-1.6.0/include
-CFLAGS =  -Wall -O3 -fopenmp
+CFLAGS =  -Wall -O3 -fopenmp -std=c++11
 #LIB = gomp
 LDFLAGS = -lboost_program_options -lgomp -lpthread
 
