got rid of unnecessesary multiplications

--- a/example/makefile
+++ b/example/makefile
@@ -7,11 +7,11 @@ LD = g++
 WINDRES = windres
 
 #INC = -I../../../gtest-1.6.0/include
-#CFLAGS =  -Wall -O3 -fopenmp -std=c++11 -pg
-CFLAGS =  -Wall -O3 -fopenmp -std=c++11
+CFLAGS =  -Wall -O3 -fopenmp -std=c++11 -pg
+#CFLAGS =  -Wall -O3 -fopenmp -std=c++11
 #LIB = gomp
-#LDFLAGS = -lboost_program_options -lgomp -lpthread -pg
-LDFLAGS = -lboost_program_options -lgomp -lpthread
+LDFLAGS = -lboost_program_options -lgomp -lpthread -pg
+#LDFLAGS = -lboost_program_options -lgomp -lpthread
 
 SRC = ../src
 OBJ_DIR = obj
