--- a/appendix/makefile
+++ b/appendix/makefile
@@ -6,17 +6,14 @@ AR = ar
 LD = g++
 WINDRES = windres
 
-#INC = -I../../../gtest-1.6.0/include
-#CFLAGS =  -Wall -O3 -fopenmp -std=c++11 -pg
 CFLAGS =  -Wall -O3 -fopenmp -std=c++11
 #LIB = gomp
-#LDFLAGS = -lboost_program_options -lgomp -lpthread -pg
 LDFLAGS = -lboost_program_options -lgomp -lpthread
 
 SRC = ../src
 OBJ_DIR = obj
 BIN_DIR = bin
-OUTPUT = $(BIN_DIR)/BubbleTest
+OUTPUT = $(BIN_DIR)/Appendix
 
 # creating OBJs
 OBJ_DEBUG = $(OBJ_DIR)/Analyze_basic.o  $(OBJ_DIR)/Analyze2D.o $(OBJ_DIR)/BasicIO.o $(OBJ_DIR)/BinaryIO2D.o $(OBJ_DIR)/BubbleBox2D.o $(OBJ_DIR)/Constants2D.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice2D.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix2D.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Preprocess_Drop.o $(OBJ_DIR)/Timetrack.o
