no interaction finished

--- a/example/makefile
+++ b/example/makefile
@@ -19,7 +19,7 @@ BIN_DIR = bin
 OUTPUT = $(BIN_DIR)/BubbleTest
 
 # creating OBJs
-OBJ_DEBUG = $(OBJ_DIR)/Analyze_basic.o  $(OBJ_DIR)/Analyze2D.o $(OBJ_DIR)/BasicIO.o $(OBJ_DIR)/BinaryIO2D.o $(OBJ_DIR)/BubbleBox2D.o $(OBJ_DIR)/Constants2D.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice2D.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix2D.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Preprocess_Drop.o $(OBJ_DIR)/Timetrack.o
+OBJ_DEBUG = $(OBJ_DIR)/Analyze_basic.o  $(OBJ_DIR)/Analyze2D.o $(OBJ_DIR)/BasicIO.o $(OBJ_DIR)/BinaryIO2D.o $(OBJ_DIR)/BubbleBox2D.o $(OBJ_DIR)/Constants2D.o $(OBJ_DIR)/Cell2D.o $(OBJ_DIR)/Definitions2D.o $(OBJ_DIR)/Lattice2D.o $(OBJ_DIR)/Lattice2D_no_inter.o $(OBJ_DIR)/main.o $(OBJ_DIR)/Matrix2D.o $(OBJ_DIR)/ParamSet.o $(OBJ_DIR)/Preprocess.o $(OBJ_DIR)/Preprocess_Drop.o $(OBJ_DIR)/Timetrack.o
 
 all: clean build
 
@@ -62,6 +62,9 @@ $(OBJ_DIR)/Definitions2D.o: $(SRC)/2D/Definitions2D.cc
 
 $(OBJ_DIR)/Lattice2D.o: $(SRC)/2D/Lattice2D.cc
 	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Lattice2D.cc -o $(OBJ_DIR)/Lattice2D.o
+
+$(OBJ_DIR)/Lattice2D_no_inter.o: $(SRC)/2D/Lattice2D_no_inter.cc
+	$(CXX) $(CFLAGS) $(INC) -c $(SRC)/2D/Lattice2D_no_inter.cc -o $(OBJ_DIR)/Lattice2D_no_inter.o
 
 $(OBJ_DIR)/main.o: main.cc
 	$(CXX) $(CFLAGS) $(INC) -c main.cc -o $(OBJ_DIR)/main.o
